# beat-by-beat

./: .gitattributes  .gitignore  COMMAND-REFERENCE.md  GITHUB-SETUP.md  PDF-AND-TTS-GUIDE.md  PRINTING-GUIDE.md  QUICK-START.md  QUICKSTART.md  README.md  TTS-GITHUB-GUIDE.md  generate-all.sh  generate.sh  get-tts-urls.sh  publish-tts.sh  pyproject.toml
.claude/: settings.local.json
card-data/: judge-cards.csv  moves.csv  rhythm-cards.csv  stumble-cards.csv
card-generator/: calculate_move_percentages.py  generator.py  pdf_generator.py  tts_generator.py  tts_json_generator.py
docs/: GITHUB-SETUP.md  PRINTING.md  TTS-GITHUB.md  TTS-RENDERING.md  beat-by-beat-judges.md  beat-by-beat-moves.md  beat-by-beat-rhythm.md  beat-by-beat-rulebook.md
output/tts/: beat-by-beat.json
scripts/: generate-all.sh  get-tts-urls.sh  publish-tts.sh  setup.sh
